plugins {
	id 'org.springframework.boot' version '3.2.12'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'java'
	id 'jacoco'
}

group = 'com.pragma.plazoleta'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	springBootVersion = "3.2.12"
	mapstructVersion = "1.5.5.Final"
	lombokVersion = "1.18.30"
	lombokMapstructBindingVersion = "0.2.0"
	mySqlConnectorVersion = "8.3.0"
	openApiVersion = "2.3.0"
	jwtVersion = "0.11.5"
}

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-starter-validation:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
	implementation "org.springframework.boot:spring-boot-starter-security:${springBootVersion}"
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	developmentOnly "org.springframework.boot:spring-boot-devtools:${springBootVersion}"
	testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
	testImplementation "org.springframework.security:spring-security-test:6.2.2"

	runtimeOnly "com.mysql:mysql-connector-j:${mySqlConnectorVersion}"

	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openApiVersion}"

	implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
    }
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	finalizedBy jacocoTestReport
}